Bug 137754 - Crash when applying styles in a table within Impress
Summary: Crash when applying styles in a table within Impress
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2020-10-26 08:20 UTC by Kevin Suo
Modified: 2020-10-30 09:26 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
gdbtrace.log (25.80 KB, text/x-log)
2020-10-26 14:58 UTC, Kevin Suo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2020-10-26 08:20:09 UTC
Steps to Reproduce:
1. New Impress, insert a table.
2. Type some text in table. E.g., A1 = 1, B1 = 2.
3. Select the two cells, then apply default style.
4. Click any other cells, then select the two cells and apply default style again.
--> Crash in step 4.

Version: 7.0.3.0.0+
Build ID: a9bad3ef281c825bf57437a1b5154e413d7f18cd
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: zh-CN (zh_CN.UTF-8); 界面: zh-CN
Calc: threaded

Also in version 6.4.6.2.
Comment 1 Timur 2020-10-26 12:35:36 UTC
I reproduced crash both in Lin and Win with LO 7.1+ so I set New.

I also repro with:
1. New Impress, insert a table.
2. Select cells A1 and B1.
3. Open Sidebar-Styles-Drawing Styles (and click Default Drawing Style ?).
4. Select A1 and B1 few times.
--> Crash

We need to check if this happened before. I think I had crash also with 6.3.
Comment 2 Kevin Suo 2020-10-26 14:58:27 UTC
Created attachment 166740 [details]
gdbtrace.log

Here is a gdb backtrace generated with master build with --enable-dbgutil option.
Comment 3 Timur 2020-10-27 09:42:52 UTC
Kevin, my experience shows that chances for fix are much better if bibisect is done, and this looks like a regression, seems not to crash in 6.2. 
I tried to do it but somehow I didn't get consistent results. Please try.
Comment 4 Kevin Suo 2020-10-27 11:24:52 UTC
I tried until libreoffice-7-0 branch point, but in some versions the crash happen in different situation, not sure whether they are the same issue.
Comment 5 Xisco Faulí 2020-10-29 15:07:51 UTC
Also reproduced in

Version: 5.2.0.0.alpha0+
Build ID: 3ca42d8d51174010d5e8a32b96e9b4c0b3730a53
Threads 4; Ver: 5.7; Render: default; 
Locale: en-US (en_US.UTF-8)
Comment 6 Xisco Faulí 2020-10-29 15:37:54 UTC
Easier way to reproduce it:
1. Insert the table
2. Click on a cell and select a style form the sidebar
3. Click outside the table
4. Click on another cell and select a style from the sidebar

-> Crash
Comment 7 Xisco Faulí 2020-10-29 16:02:02 UTC
it needs to be bisected with win-5.1.
I can't bisect it with linux-5.0 because there is another issue that makes LibreOffice to crash when clickin on a cell, clicking outside the table and clicking on the cell again
Comment 8 Noel Grandin 2020-10-29 17:57:39 UTC
fix in progress here:

 https://gerrit.libreoffice.org/c/core/+/105025
Comment 9 Commit Notification 2020-10-29 20:31:06 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9f6fbe36da3d53df0b64c41e9ea51cc20d442a30

tdf#137754 Crash in styles tree in sidebar in impress

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2020-10-30 08:04:02 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/e25ba916316a88c5652810108e3fdace0ad2f4d5

tdf#137754 Crash in styles tree in sidebar in impress

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2020-10-30 09:22:42 UTC
I do confirm it no longer crashes hovering the sidebar in

Version: 7.1.0.0.alpha1+
Build ID: ec1f4d3253963ac16d638734ac70dde033e82154
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Meanwhile, I've found a similar issue that I will report in a follow-up bug.

@Noel, thanks for fixing this issue!!