tdf#137754 Crash in styles tree in sidebar in impress

this is a timing bug - easier to hit on a slow machine,
or with a debug build - it happens when mouse movement
triggers a request for a tooltip in the tree, but the tree
is in a transition state.

Change-Id: Ibed7ffd01483b26f2debb1aa9cc99e23b38ba950
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105025
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>